# storage-provider-webdav

./: CMakeLists.txt
data/: CMakeLists.txt  com.canonical.StorageFramework.Provider.OwnCloud.service.in  storage-provider-nextcloud.service  storage-provider-owncloud.application  storage-provider-owncloud.desktop  storage-provider-owncloud.service
data/accounts/: storage-provider-nextcloud.application  storage-provider-nextcloud.desktop  storage-provider-owncloud.desktop
data/dbus/: com.canonical.StorageFramework.Provider.Nextcloud.service.in  com.canonical.StorageFramework.Provider.OwnCloud.service.in
data/systemd/: storage-provider-nextcloud.service.in  storage-provider-owncloud.service.in
debian/: changelog  control  copyright  rules  storage-provider-nextcloud.install  storage-provider-owncloud.install
src/: CMakeLists.txt  CopyMoveHandler.cpp  CopyMoveHandler.h  CreateFolderHandler.cpp  CreateFolderHandler.h  DavDownloadJob.cpp  DavDownloadJob.h  DavProvider.cpp  DavProvider.h  DavUploadJob.cpp  DavUploadJob.h  DeleteHandler.cpp  DeleteHandler.h  ListHandler.cpp  ListHandler.h  LookupHandler.cpp  LookupHandler.h  MetadataHandler.cpp  MetadataHandler.h  MultiStatusParser.cpp  MultiStatusParser.h  NextcloudProvider.cpp  NextcloudProvider.h  OwncloudProvider.cpp  OwncloudProvider.h  PropFindHandler.cpp  PropFindHandler.h  RetrieveMetadataHandler.cpp  RetrieveMetadataHandler.h  RootsHandler.cpp  RootsHandler.h  http_error.cpp  http_error.h  item_id.cpp  item_id.h  main.cpp  nextcloud.cpp  owncloud.cpp
tests/: CMakeLists.txt  testsetup.h.in
tests/davprovider/: CMakeLists.txt  davprovider_test.cpp
tests/http_error/: CMakeLists.txt  http_error_test.cpp
tests/item_id/: CMakeLists.txt  item_id_test.cpp
tests/multistatus/: CMakeLists.txt  multistatus_test.cpp
tests/nextcloudprovider/: CMakeLists.txt  nextcloudprovider_test.cpp
tests/owncloudprovider/: CMakeLists.txt  owncloudprovider_test.cpp
tests/utils/: CMakeLists.txt  DBusEnvironment.cpp  DBusEnvironment.h  DavEnvironment.cpp  DavEnvironment.h  ProviderEnvironment.cpp  ProviderEnvironment.h  fake-online-accounts-daemon.py  sabredav-server.php
